<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/Notification_SongImage"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:adjustViewBounds="true"
            android:paddingStart="15dp"
            android:paddingEnd="5dp"
            android:contentDescription="@string/SongCoverMsg" />
        <TextView
            android:id="@+id/Notification_SongName"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:maxLines="1"
            android:layout_width="235dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginTop="5dp"
            android:textColor="#000"
            android:gravity="center_horizontal" />
        <TextView
            android:id="@+id/Notification_SongAuthor"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:maxLines="1"
            android:layout_width="235dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/Notification_SongName"
            android:layout_marginStart="100dp"
            android:gravity="center_horizontal" />
        <ImageButton
            android:id="@+id/Notification_NextSongButton"
            android:src="@drawable/ic_next_song_button"
            android:layout_width="45dp"
            android:layout_height="40dp"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            android:layout_marginEnd="45dp"
            android:layout_marginTop="45dp"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/NextButtonMsg" />
        <ImageButton
            android:id="@+id/Notification_PlayPauseButton"
            android:src="@drawable/ic_play_song_button"
            android:layout_width="45dp"
            android:layout_height="40dp"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            android:layout_marginEnd="5dp"
            android:layout_marginTop="45dp"
            android:layout_toStartOf="@id/Notification_NextSongButton"
            android:contentDescription="@string/PlayPauseButtonMsg" />
        <ImageButton
            android:id="@+id/Notification_PreviousSongButton"
            android:src="@drawable/ic_previous_song_button"
            android:layout_width="45dp"
            android:layout_height="40dp"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            android:layout_marginEnd="5dp"
            android:layout_marginTop="45dp"
            android:layout_toStartOf="@id/Notification_PlayPauseButton"
            android:contentDescription="@string/PreviousButtonMsg" />
        <ImageButton
            android:id="@+id/Notification_ShuffleSongButton"
            android:src="@drawable/ic_shuffle_disabled_song_button"
            android:layout_width="45dp"
            android:layout_height="40dp"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            android:layout_marginEnd="5dp"
            android:layout_marginTop="45dp"
            android:layout_toStartOf="@id/Notification_PreviousSongButton"
            android:contentDescription="@string/ShuffleButtonMsg" />
</RelativeLayout>